api delete route
